2000-06-15  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/MailOut.pm (handle_bounce): Pull per-user bounce handling
	out into handle_bounce_user.
	(handle_bounce_user): New function.

2000-06-14  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Mj/SubscriberList.pm: Add 'bounce' as a field.

2000-06-14  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Bf/Parser.pm (parse_postfix): Fix failure ID line.

	* lib/Mj/MailOut.pm (handle_bounce): Fix busted setting of
        $parser->output_dir.

	* lib/Bf/Parser.pm (parse_qmail): Fold parse_yahoo in; the bounce
	formats are very similar.
	(parse_postfix): New function to parse bounces from Postfix.

2000-06-11  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Bf/Parser.pm (parse_exim): Handle multiline diagnostics.
	(parse_qmail): New function: parse bounces from qmail.
	(parse_dsn): Tightened up delivery-status block parsing; accept
	random numbers before and between blocks.  Why is Netscape
	Messaging Server so screwed up?
	(check_dsn_diags): Try even harder to get diagnostics.  If we try
	much harder, we'll have to start making them up.
	(check_dsn_netscape): Added a few more formats.  How many
	special-purpose bounce formats does this software have?
	(parse_softswitch): Parse bounces from Soft-Switch.

2000-06-10  Jason Tibbitts  <tibbs@morpheus.math.uh.edu>

	* lib/Bf/Parser.pm (check_dsn_diags): Add another possible
	pattern.

2000-06-09  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Majordomo.pm (who_chunk): If the user has an expiring nomail
	class set, return information on the original class.

2000-06-08  Jason L Tibbitts III  <tibbs@math.uh.edu>

	* lib/Mj/List.pm (describe_class): Return nomail expiry times
	properly in as-setting mode.

	* lib/Mj/TextOutput.pm (set): Rewrite to handle multiple
        comma-separated states, some with complex syntax.

	* lib/Bf/Parser.pm (check_dsn_netscape): New function to check
        DSNs from netscape messaging server which don't have per-user